added url for static files

--- a/nickdima/templates/lunchbreak/index.html
+++ b/nickdima/templates/lunchbreak/index.html
@@ -30,7 +30,7 @@
 
             <figure>
                 <a href="https://www.nickdima.com/static/lunchbreak/assets/snake_js">
-                    <img src="assets/snake_capture.png" alt="Snake Screenshot">
+                    <img src="{{ url_for('static', filename='assets/snake_capture.png') }}" alt="Snake Screenshot">
                     <figcaption>Snake: Eat food to grow bigger!</figcaption>
                 </a>
             </figure>
