finished index for lunchbreak

--- a/nickdima/templates/lunchbreak/index.html
+++ b/nickdima/templates/lunchbreak/index.html
@@ -30,42 +30,42 @@
 
             <figure>
                 <a href="https://www.nickdima.com/static/lunchbreak/assets/snake_js">
-                    <img src="{{ url_for('static', filename='assets/snake_capture.png') }}" alt="Snake Screenshot">
+                    <img src="{{ url_for('static', filename='lunchbreak/assets/snake_capture.png') }}" alt="Snake Screenshot">
                     <figcaption>Snake: Eat food to grow bigger!</figcaption>
                 </a>
             </figure>
 
             <figure>
                 <a href="https://www.nickdima.com/static/lunchbreak/assets/minesweeper_js">
-                    <img src="assets/minesweeper_capture.png" alt="Minesweeper Screenshot">
+                    <img src="{{ url_for('static', filename='lunchbreak/assets/minesweeper_capture.png') }}" alt="Minesweeper Screenshot">
                     <figcaption>Minesweeper: Don't click on a bomb!</figcaption>
                 </a>
             </figure>
             
             <figure>
                 <a href="https://www.nickdima.com/static/lunchbreak/assets/asteroids_js">
-                    <img src="assets/asteroids_capture.png" alt="Asteroids Screenshot">
+                    <img src="{{ url_for('static', filename='lunchbreak/assets/asteroids_capture.png') }}" alt="Asteroids Screenshot">
                     <figcaption>Asteroids: Destroy all the asteroids!</figcaption>
                 </a>
             </figure>
             
             <figure>
                 <a href="https://www.nickdima.com/static/lunchbreak/assets/neuro_flappybird_js/">
-                    <img src="assets/neuro_flappybird.png" alt="Flappy Bird Screenshot">
+                    <img src="{{ url_for('static', filename='lunchbreak/assets/neuro_flappybird.png') }}" alt="Flappy Bird Screenshot">
                     <figcaption>Neuro-Evolutionary Flappy Bird: Teach your computer to play flappy bird!</figcaption>
                 </a>
             </figure>
             
             <figure>
                 <a href="https://www.nickdima.com/static/lunchbreak/assets/jungle_run_js/">
-                    <img src="assets/jungle_run_capture2.png" alt="Jungle Run Screenshot">
+                    <img src="{{ url_for('static', filename='lunchbreak/assets/jungle_run_capture2.png') }}" alt="Jungle Run Screenshot">
                     <figcaption>Jump and dodge as you make your way through the procedurally generated forrest!</figcaption>
                 </a>
             </figure>
             
             <figure>
                 <a href="https://www.nickdima.com/static/lunchbreak/assets/tetris_js">
-                    <img src="assets/tetris_capture.png" alt="Classic Tetris!">
+                    <img src="{{ url_for('static', filename='lunchbreak/assets/tetris_capture.png') }}" alt="Classic Tetris!">
                     <figcaption>Clear rows as fast as you can!</figcaption>
                 </a>
             </figure>
@@ -78,14 +78,14 @@
             
             <figure>
                 <a href="https://www.nickdima.com/static/lunchbreak/assets/towerdefense_js">
-                    <img src="assets/towerdefense_capture.png" alt="Towerdefense Screenshot">
+                    <img src="{{ url_for('static', filename='lunchbreak/assets/towerdefense_capture.png') }}" alt="Towerdefense Screenshot">
                     <figcaption>Tower Defense: Protect your tower!</figcaption>
                 </a>
             </figure>
             
             <figure>
                 <a href="https://www.nickdima.com/static/lunchbreak/assets/highway_chase_js">
-                    <img src="assets/highway_capture.png" alt="Highway Chase Screenshot">
+                    <img src="{{ url_for('static', filename='lunchbreak/assets/highway_capture.png') }}" alt="Highway Chase Screenshot">
                     <figcaption>Chase Your Enemies Through 2 Intense Levels!</figcaption>
                 </a>
             </figure>
