--- a/nickdima/templates/lunchbreak/index.html
+++ b/nickdima/templates/lunchbreak/index.html
@@ -9,7 +9,7 @@
         <meta property="og:description" content="A directory of free online games created by Nick Dima with javascript">
         <meta property="og:url" content="https://www.nickdima.com/lunchbreak">
         <meta property="og:type" content="games">
-        <meta property="og:image" content="https://www.nickdima.com/static/lunchbreak/assets/website_thumbnail.png">
+        <meta property="og:image" content="{{ url_for('static', filename='lunchbreak/assets/website_thumbnail.png') }}">
     </head>
     
     
