fixed tetris a tag

--- a/nickdima/templates/lunchbreak/index.html
+++ b/nickdima/templates/lunchbreak/index.html
@@ -64,7 +64,7 @@
             </figure>
             
             <figure>
-                <a href="{{ url_for('lunchbreak.tetris') }}>
+                <a href="{{ url_for('lunchbreak.tetris') }}">
                     <img src="{{ url_for('static', filename='lunchbreak/assets/tetris_capture.png') }}" alt="Classic Tetris!">
                     <figcaption>Clear rows as fast as you can!</figcaption>
                 </a>
