url_for snake was wrong

--- a/nickdima/templates/lunchbreak/index.html
+++ b/nickdima/templates/lunchbreak/index.html
@@ -29,7 +29,7 @@
             <figcaption>Finished Games</figcaption>
 
             <figure>
-                <a href="{{ url_for('lunchbreak.snake') }}}">
+                <a href="{{ url_for('lunchbreak.snake') }}">
                     <img src="{{ url_for('static', filename='lunchbreak/assets/snake_capture.png') }}" alt="Snake Screenshot">
                     <figcaption>Snake: Eat food to grow bigger!</figcaption>
                 </a>
