added the a tag for jungle run to the lunchbreak index file

--- a/nickdima/templates/lunchbreak/index.html
+++ b/nickdima/templates/lunchbreak/index.html
@@ -57,7 +57,7 @@
             </figure>
             
             <figure>
-                <a href="https://www.nickdima.com/static/lunchbreak/assets/jungle_run_js/">
+                <a href="{{ url_for( 'lunchbreak.junglerun' )}}}">
                     <img src="{{ url_for('static', filename='lunchbreak/assets/jungle_run_capture2.png') }}" alt="Jungle Run Screenshot">
                     <figcaption>Jump and dodge as you make your way through the procedurally generated forrest!</figcaption>
                 </a>
