--- a/nickdima/templates/lunchbreak/index.html
+++ b/nickdima/templates/lunchbreak/index.html
@@ -43,14 +43,14 @@
             </figure>
             
             <figure>
-                <a href="{{ url_for('asteroids') }}">
+                <a href="{{ url_for('lunchbreak.asteroids') }}">
                     <img src="{{ url_for('static', filename='lunchbreak/assets/asteroids_capture.png') }}" alt="Asteroids Screenshot">
                     <figcaption>Asteroids: Destroy all the asteroids!</figcaption>
                 </a>
             </figure>
             
             <figure>
-                <a href="{{ url_for('neuro_flappybird') }}">
+                <a href="{{ url_for('lunchbreak.neuro_flappybird') }}">
                     <img src="{{ url_for('static', filename='lunchbreak/assets/neuro_flappybird.png') }}" alt="Flappy Bird Screenshot">
                     <figcaption>Neuro-Evolutionary Flappy Bird: Teach your computer to play flappy bird!</figcaption>
                 </a>
