changed highway chase url

--- a/nickdima/templates/lunchbreak/index.html
+++ b/nickdima/templates/lunchbreak/index.html
@@ -84,7 +84,7 @@
             </figure>
             
             <figure>
-                <a href="https://www.nickdima.com/static/lunchbreak/assets/highway_chase_js">
+                <a href="{{ url_for('lunchbreak.highway_chase') }}">
                     <img src="{{ url_for('static', filename='lunchbreak/assets/highway_capture.png') }}" alt="Highway Chase Screenshot">
                     <figcaption>Chase Your Enemies Through 2 Intense Levels!</figcaption>
                 </a>
