changed drop down function

--- a/nickdima/templates/silk_thai/menu/menu.html
+++ b/nickdima/templates/silk_thai/menu/menu.html
@@ -78,7 +78,8 @@
 
 
 <script>
- function add(item_name){
+ function add(){
+  let item_name = document.getElementById('select_menu').value;
   let elm = document.getElementById('cart_quantity');
   if (!elm.innerHTML.includes(item_name)){
     elm.innerHTML += item_name + ": <input type='number' name=" + item_name + "min='0' max='10' step='1' value='0'";
@@ -86,7 +87,7 @@
  }
 </script>
 
-<select onchange="add(window[this.value]);">
+<select id="select_menu" onchange="add();">
   <option value="Pad Thai">Pad Thai</option>
   <option value="Pad Thai 2">Pad Thai 2</option>
   <option value="Calamari">Calamari</option>
