--- a/nickdima/templates/silk_thai/menu/menu.html
+++ b/nickdima/templates/silk_thai/menu/menu.html
@@ -83,6 +83,8 @@
   let elm = document.getElementById('cart_quantity');
   if (!elm.innerHTML.includes(item_name)){
     elm.innerHTML = "<br>" +item_name + ": <input type='number' name=" + item_name + "min='0' max='10' step='1' value='0'> <br>" + elm.innerHTML;
+
+    window.scrollTo(0,document.body.scrollHeight);
   }
  }
 </script>
