testing cetnering a div

--- a/nickdima/templates/silk_thai/menu/menu.html
+++ b/nickdima/templates/silk_thai/menu/menu.html
@@ -89,7 +89,17 @@
   }
  }
 </script>
-<div>
+<style>
+.center-div
+{
+  margin: 0 auto;
+  width: 100px;
+  height: 100px;
+  background-color: #ccc;
+  border-radius: 3px;
+}
+</style>
+<div class="center-div">
 <div>
 <select id="select_menu" onchange="add_item();">
   <option value="Pad Thai - Chicken">Pad Thai</option>
