changed item input box size

--- a/nickdima/templates/silk_thai/menu/menu.html
+++ b/nickdima/templates/silk_thai/menu/menu.html
@@ -83,12 +83,13 @@
   let item_name = document.getElementById('select_menu').value;
   let elm = document.getElementById('cart_quantity');
   if (!elm.innerHTML.includes(item_name)){
-    elm.innerHTML = "<br>" +item_name + ": <input type='number' name=" + item_name + "min='0' max='10' step='1' value='0'> <br>" + elm.innerHTML;
+    elm.innerHTML = "<br>" +item_name + ": <input class='item_inp' type='number' name=" + item_name + "min='0' max='10' step='1' value='0'> <br>" + elm.innerHTML;
 
     window.scrollTo(0,document.body.scrollHeight);
   }
  }
 </script>
+
 <style>
 .center-div
 {
@@ -96,7 +97,12 @@
   width: 500px;
   border-radius: 3px;
 }
+.item_inp
+{
+  width: 50px;
+}
 </style>
+
 <div class="center-div">
 <div>
 <select id="select_menu" onchange="add_item();">
