--- a/nickdima/templates/silk_thai/checkout/order_summary.html
+++ b/nickdima/templates/silk_thai/checkout/order_summary.html
@@ -19,6 +19,11 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='assets/theme/css/style.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='assets/mobirise/css/mbr-additional.css') }}" type="text/css">
 
+  {% for item in items %}
+    console.log({{item[0]}})
+    console.log({{item[1]}})
+    console.log('next item')
+  {% endfor %}
 
 
 </head>
