--- a/nickdima/templates/silk_thai/checkout/order_summary.html
+++ b/nickdima/templates/silk_thai/checkout/order_summary.html
@@ -19,13 +19,6 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='assets/theme/css/style.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='assets/mobirise/css/mbr-additional.css') }}" type="text/css">
 
-  {% for item in items %}
-    console.log({{item[0]}})
-    console.log({{item[1]}})
-    console.log('next item')
-  {% endfor %}
-
-
 </head>
 <body>
   <section class="menu cid-qTkzRZLJNu" once="menu" id="menu1-h">
@@ -77,7 +70,25 @@
         <h3 class="pb-5 mbr-section-subtitle mbr-fonts-style mbr-light display-5">Make Any Edits Here To Quantity Before Checkout</h3>
         <div class="row media-row">
 
-          <!--NEED ONE OF THESE FOR ALL IMAGES BEING DISPLAYED-->
+          {% for item in items %}
+          <div class="team-item col-lg-3 col-md-6">
+                  <div class="item-image">
+                      <img src="assets/images/drunken-noodle-510x383.jpg" alt="" title="">
+                  </div>
+                  <div class="item-caption py-3">
+                      <div class="item-name px-2">
+                          <p class="mbr-fonts-style display-5">
+                             {{item[1]}} - {{item[0]}}</p>
+                      </div>
+                      <div class="item-role px-2">
+                          <p>Price: &lt;&gt;</p>
+                      </div>
+
+                  </div>
+              </div>
+          {% endfor %}
+          
+          <!--NEED ONE OF THESE FOR ALL IMAGES BEING DISPLAYED
         <div class="team-item col-lg-3 col-md-6">
                 <div class="item-image">
                     <img src="assets/images/drunken-noodle-510x383.jpg" alt="" title="">
@@ -123,6 +134,9 @@
 
                 </div>
             </div></div>
+            
+            -->
+
     </div>
 </section>
 
