added comma to ulr_for

--- a/nickdima/templates/lunchbreak/games/neuro_flappybird/index.html
+++ b/nickdima/templates/lunchbreak/games/neuro_flappybird/index.html
@@ -1,15 +1,15 @@
 {% block head %}
     <!--Dependencies: runs a lot faster than normal p5.js but doesn't have friendly error system-->
     <!--https://github.com/processing/p5.js/wiki/Optimizing-p5.js-Code-for-Performance-->
-    <script src="{{url_for('static', filename='neuro_flappybird/libraries/p5.min.js)}}"></script>
+    <script src="{{url_for('static', filename='neuro_flappybird/libraries/p5.min.js')}}"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <!--Game Logic-->
-    <script src="{{url_for('static', filename='neuro_flappybird/js/matrix.js)}}"></script>
-    <script src="{{url_for('static', filename='neuro_flappybird/js/brain.js)}}"></script>
-    <script src="{{url_for('static', filename='neuro_flappybird/js/pipes.js)}}"></script>
-    <script src="{{url_for('static', filename='neuro_flappybird/js/bird.js)}}"></script>
-    <script src="{{url_for('static', filename='neuro_flappybird/js/evolution.js)}}"></script>
-    <script src="{{url_for('static', filename='neuro_flappybird/js/sketch.js)}}"></script>
+    <script src="{{url_for('static', filename='neuro_flappybird/js/matrix.js')}}"></script>
+    <script src="{{url_for('static', filename='neuro_flappybird/js/brain.js')}}"></script>
+    <script src="{{url_for('static', filename='neuro_flappybird/js/pipes.js')}}"></script>
+    <script src="{{url_for('static', filename='neuro_flappybird/js/bird.js')}}"></script>
+    <script src="{{url_for('static', filename='neuro_flappybird/js/evolution.js')}}"></script>
+    <script src="{{url_for('static', filename='neuro_flappybird/js/sketch.js')}}"></script>
     
     <style>
         p{ margin-top: 0; margin-bottom: 0 }
