added home button

--- a/nickdima/templates/lunchbreak/games/asteroids/index.html
+++ b/nickdima/templates/lunchbreak/games/asteroids/index.html
@@ -11,6 +11,10 @@
     <script src="{{ url_for('static', filename='asteroids/js/sketch.js') }}"></script>
 {% endblock %}
 {% block content %}
+    <form action="http://www.nickdima.com/lunchbreak">
+        <input type="submit" value="Homepage">
+    </form>
+    <hr>
     <div id="sketch-holder">
     <!-- p5.js sketch here -->
     </div>
