--- a/nickdima/templates/lunchbreak/games/jungle_run/index.html
+++ b/nickdima/templates/lunchbreak/games/jungle_run/index.html
@@ -15,6 +15,10 @@
     
 {% endblock %}
 {% block content %}
+    <form action="http://www.nickdima.com/lunchbreak">
+        <input type="submit" value="Homepage">
+    </form>
+    <hr>
         <p id="score_dom">Score: 0</p>
         
         <div id="sketch-holder">
