--- a/nickdima/templates/lunchbreak/games/neuro_flappybird/index.html
+++ b/nickdima/templates/lunchbreak/games/neuro_flappybird/index.html
@@ -18,7 +18,7 @@
 {% endblock %}
     
 {% block content %}
-    <form action="www.nickdima.com/lunchbreak">
+    <form action="http://www.nickdima.com/lunchbreak">
         <input type="submit" value="Homepage">
     </form>
     <hr>
