--- a/nickdima/templates/lunchbreak/games/highway_chase/index.html
+++ b/nickdima/templates/lunchbreak/games/highway_chase/index.html
@@ -24,6 +24,10 @@
     
 {% endblock %}
 {% block content %}
+    <form action="http://www.nickdima.com/lunchbreak">
+        <input type="submit" value="Homepage">
+    </form>
+    <hr>
     <div>
         <input id="powerupbutton" type="button" value="change level" onclick="change_level();"/>
         <input id="pausebutton" type="button" value="pause/instructions" onclick="pause_game();"/>
