--- a/nickdima/templates/lunchbreak/games/tetris/index.html
+++ b/nickdima/templates/lunchbreak/games/tetris/index.html
@@ -16,5 +16,9 @@
     <div id="sketch-holder">
     <!-- p5.js sketch here -->
     </div>
+    <form action="http://www.nickdima.com/lunchbreak">
+        <input type="submit" value="Homepage">
+    </form>
+    <hr>
 {% endblock %}
 
