added home button

--- a/nickdima/templates/lunchbreak/games/snake/index.html
+++ b/nickdima/templates/lunchbreak/games/snake/index.html
@@ -12,6 +12,10 @@
     
 {% endblock %}
 {% block content %}
+    <form action="http://www.nickdima.com/lunchbreak">
+        <input type="submit" value="Homepage">
+    </form>
+    <hr>
     <div id="sketch-holder">
     <!-- p5.js sketch here -->
     </div>
