--- a/nickdima/templates/lunchbreak/games/tower_defense/index.html
+++ b/nickdima/templates/lunchbreak/games/tower_defense/index.html
@@ -24,8 +24,8 @@
 
 {% endblock %}
 {% block content %}
-        <form action="www.nickdima.com/lunchbreak">
-            <input type="submit" value="Homepage">
-        </form>
-        <hr>
+    <form action="http://www.nickdima.com/lunchbreak">
+        <input type="submit" value="Homepage">
+    </form>
+    <hr>
 {% endblock %}
