--- a/nickdima/templates/lunchbreak/games/minesweeper/index.html
+++ b/nickdima/templates/lunchbreak/games/minesweeper/index.html
@@ -1,9 +1,9 @@
 {% block header %}
     <!--Dependencies-->
-    <script src="{{url_for('static', filename='libraries/p5.js')}}"></script>
+    <script src="{{url_for('static', filename='minesweeper/libraries/p5.js')}}"></script>
     <!-- Game Logic-->
-    <script src="{{url_for('static', filename='js/cell.js')}}"></script>
-    <script src="{{url_for('static', filename='js/sketch.js')}}"></script>
+    <script src="{{url_for('static', filename='minesweeper/js/cell.js')}}"></script>
+    <script src="{{url_for('static', filename='minesweeper/js/sketch.js')}}"></script>
       
     <style> body {padding: 0; margin: 0;} </style>
 {% endblock %}
