added lunchbreak link

--- a/nickdima/templates/home/home2.html
+++ b/nickdima/templates/home/home2.html
@@ -34,7 +34,7 @@
                 
                 <div class="mbr-text align-center mbr-white pb-3">
                     <p class="mbr-text mbr-fonts-style display-5">
-                        Salsa Dancer<br>Machine Learning Enthusiast<br>Video Game Designer</p>
+                        Salsa Dancer<br>Machine Learning Enthusiast<br><a href="{{url_for('lunchbreak.home')}}">Video Game Designer</a></p>
                 </div>
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-primary display-4" href="https://mobirise.com">Proffesional Life</a>
                     <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.com">Personal Life</a></div>
