--- a/nickdima/templates/home/home2.html
+++ b/nickdima/templates/home/home2.html
@@ -36,7 +36,7 @@
                     <p class="mbr-text mbr-fonts-style display-5">
                         <a href="https://www.youtube.com/watch?v=A6FPyHiPUto" target="_blank">Salsa Dancer</a><br><a href="{{url_for('lunchbreak.neuro_flappybird')}}">Machine Learning Enthusiast</a><br><a href="{{url_for('lunchbreak.home')}}">Video Game Designer</a></p>
                 </div>
-                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-primary display-4" href="https://www.linkedin.com/in/nicholas-dima-975070115/">Proffesional Life</a>
+                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-primary display-4" href="https://www.linkedin.com/in/nicholas-dima-975070115/">Professional Life</a>
                     <a class="btn btn-md btn-white-outline display-4" href="#">Personal Life</a></div>
             </div>
             <div class="mbr-figure pt-5">
