added linkedin and github

--- a/nickdima/templates/home/home2.html
+++ b/nickdima/templates/home/home2.html
@@ -92,14 +92,14 @@
                     
                     
                 <div class="soc-item">
-                        <a href="#" target="_blank">
-                            <span class="socicon-twitter socicon mbr-iconfont mbr-iconfont-social"></span>
+                        <a href="https://www.linkedin.com/in/nicholas-dima-975070115/" target="_blank">
+                            <span class="socicon-linkedin socicon mbr-iconfont mbr-iconfont-social"></span>
                         </a>
                     </div><div class="soc-item">
-                        <a href="#" target="_blank">
-                            <span class="socicon-facebook socicon mbr-iconfont mbr-iconfont-social"></span>
+                        <a href="https://github.com/ncd2dq" target="_blank">
+                            <span class="socicon-github socicon mbr-iconfont mbr-iconfont-social"></span>
                         </a>
-                    </div><div class="soc-item">
+                    </div><!--<div class="soc-item">
                         <a href="#" target="_blank">
                             <span class="socicon-youtube socicon mbr-iconfont mbr-iconfont-social"></span>
                         </a>
@@ -115,7 +115,7 @@
                         <a href="#" target="_blank">
                             <span class="socicon-behance socicon mbr-iconfont mbr-iconfont-social"></span>
                         </a>
-                    </div></div>
+                    </div>--></div>
             </div>
         </div>
     </div>
