added url_for to about page

--- a/nickdima/templates/home/about.html
+++ b/nickdima/templates/home/about.html
@@ -6,19 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="generator" content="Mobirise v4.8.1, mobirise.com">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo4.png" type="image/x-icon">
+  <link rel="shortcut icon" href="{{url_for('static', filename='main_assets/images/logo4.png')}}" type="image/x-icon">
   <meta name="description" content="Website Generator Description">
-  <title>Personal Life</title>
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
-  <link rel="stylesheet" href="assets/tether/tether.min.css">
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
-  <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
-  
+  <title>Nick Dima - Personal Life</title>
+  <link rel="stylesheet" href="{{url_for('static', filename='main_assets/web/assets/mobirise-icons/mobirise-icons.css')}}">
+  <link rel="stylesheet" href="{{url_for('static', filename='main_assets/tether/tether.min.css')}}">
+  <link rel="stylesheet" href="{{url_for('static', filename='main_assets/bootstrap/css/bootstrap.min.css')}}">
+  <link rel="stylesheet" href="{{url_for('static', filename='main_assets/bootstrap/css/bootstrap-grid.min.css')}}">
+  <link rel="stylesheet" href="{{url_for('static', filename='main_assets/bootstrap/css/bootstrap-reboot.min.css')}}">
+  <link rel="stylesheet" href="{{url_for('static', filename='main_assets/socicon/css/styles.css')}}">
+  <link rel="stylesheet" href="{{url_for('static', filename='main_assets/dropdown/css/style.css')}}">
+  <link rel="stylesheet" href="{{url_for('static', filename='main_assets/theme/css/style.css')}}">
+  <link rel="stylesheet" href="{{url_for('static', filename='main_assets/mobirise/css/mbr-additional.css')}}" type="text/css">
   
   
 </head>
@@ -115,7 +114,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 80%;">
-                      <img src="assets/images/01.jpg" alt="Mobirise">  
+                      <img src="{{url_for('static', filename='main_assets/images/01.jpg')}}" alt="Mobirise">  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -219,15 +218,15 @@
 </section>
 
 
-  <script src="assets/web/assets/jquery/jquery.min.js"></script>
-  <script src="assets/popper/popper.min.js"></script>
-  <script src="assets/tether/tether.min.js"></script>
-  <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/dropdown/js/script.min.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/parallax/jarallax.min.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/theme/js/script.js"></script>
+  <script src="{{url_for('static', filename='main_assets/web/assets/jquery/jquery.min.js')}}"></script>
+  <script src="{{url_for('static', filename='main_assets/popper/popper.min.js')}}"></script>
+  <script src="{{url_for('static', filename='main_assets/tether/tether.min.js')}}"></script>
+  <script src="{{url_for('static', filename='main_assets/bootstrap/js/bootstrap.min.js')}}"></script>
+  <script src="{{url_for('static', filename='main_assets/dropdown/js/script.min.js')}}"></script>
+  <script src="{{url_for('static', filename='main_assets/touchswipe/jquery.touch-swipe.min.js')}}"></script>
+  <script src="{{url_for('static', filename='main_assets/parallax/jarallax.min.js')}}"></script>
+  <script src="{{url_for('static', filename='main_assets/smoothscroll/smooth-scroll.js')}}"></script>
+  <script src="{{url_for('static', filename='main_assets/theme/js/script.js')}}"></script>
   
   
 </body>
