--- a/nickdima/templates/home/home2.html
+++ b/nickdima/templates/home/home2.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="{{url_for('static', filename='main_assets/images/logo4.png')}}" type="image/x-icon">
   <meta name="description" content="">
-  <title>Home</title>
+  <title>Nick Dima - Home</title>
   <link rel="stylesheet" href="{{url_for('static', filename='main_assets/web/assets/mobirise-icons/mobirise-icons.css')}}">
   <link rel="stylesheet" href="{{url_for('static', filename='main_assets/tether/tether.min.css')}}">
   <link rel="stylesheet" href="{{url_for('static', filename='main_assets/bootstrap/css/bootstrap.min.css')}}">
