--- a/nickdima/templates/home/about.html
+++ b/nickdima/templates/home/about.html
@@ -39,7 +39,7 @@
             <div class="navbar-brand">
                 
                 <span class="navbar-caption-wrap">
-                    <a class="navbar-caption text-white display-4" href="https://mobirise.com">
+                    <a class="navbar-caption text-white display-4" href="{{url_for('home.home_index')}}">
                         MOBIRISE
                     </a>
                 </span>
@@ -47,7 +47,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.com">
+                    <a class="nav-link link text-white display-4" href="{{url_for('home.home_index')}}">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn">&nbsp;Home</span></a>
                 </li></ul>
             
@@ -163,15 +163,15 @@
                     
                     
                 <li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white mbr-bold" href="#" target="_blank">About us</a>
-                    </li><li class="foot-menu-item mbr-fonts-style display-7">
+                        <a class="text-white mbr-bold" href="{{url_for('home.about')}}" target="_blank">About Me</a>
+                    </li><!--<li class="foot-menu-item mbr-fonts-style display-7">
                         <a class="text-white mbr-bold" href="#" target="_blank">Services</a>
                     </li><li class="foot-menu-item mbr-fonts-style display-7">
                         <a class="text-white mbr-bold" href="#" target="_blank">Get In Touch</a>
                     </li><li class="foot-menu-item mbr-fonts-style display-7">
                         <a class="text-white mbr-bold" href="#" target="_blank">Careers</a>
-                    </li><li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white mbr-bold" href="#" target="_blank">Work</a>
+                    </li>--><li class="foot-menu-item mbr-fonts-style display-7">
+                        <a class="text-white mbr-bold" href="#" target="_blank">Contact Me</a>
                     </li></ul>
             </div>
             <div class="row social-row">
@@ -183,35 +183,30 @@
                     
                     
                 <div class="soc-item">
-                        <a href="https://twitter.com/mobirise" target="_blank">
-                            <span class="socicon-twitter socicon mbr-iconfont mbr-iconfont-social"></span>
+                        <a href="https://www.linkedin.com/in/nicholas-dima-975070115/" target="_blank">
+                            <span class="socicon-linkedin socicon mbr-iconfont mbr-iconfont-social"></span>
                         </a>
                     </div><div class="soc-item">
-                        <a href="https://www.facebook.com/pages/Mobirise/1616226671953247" target="_blank">
-                            <span class="socicon-facebook socicon mbr-iconfont mbr-iconfont-social"></span>
+                        <a href="https://github.com/ncd2dq" target="_blank">
+                            <span class="socicon-github socicon mbr-iconfont mbr-iconfont-social"></span>
                         </a>
-                    </div><div class="soc-item">
-                        <a href="https://www.youtube.com/c/mobirise" target="_blank">
+                    </div><!--<div class="soc-item">
+                        <a href="#" target="_blank">
                             <span class="socicon-youtube socicon mbr-iconfont mbr-iconfont-social"></span>
                         </a>
                     </div><div class="soc-item">
-                        <a href="https://instagram.com/mobirise" target="_blank">
+                        <a href="#" target="_blank">
                             <span class="socicon-instagram socicon mbr-iconfont mbr-iconfont-social"></span>
                         </a>
                     </div><div class="soc-item">
-                        <a href="https://plus.google.com/u/0/+Mobirise" target="_blank">
+                        <a href="#" target="_blank">
                             <span class="socicon-googleplus socicon mbr-iconfont mbr-iconfont-social"></span>
                         </a>
                     </div><div class="soc-item">
-                        <a href="https://www.behance.net/Mobirise" target="_blank">
+                        <a href="#" target="_blank">
                             <span class="socicon-behance socicon mbr-iconfont mbr-iconfont-social"></span>
                         </a>
-                    </div></div>
-            </div>
-            <div class="row row-copirayt">
-                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    © Copyright 2017 Mobirise - All Rights Reserved
-                </p>
+                    </div>--></div>
             </div>
         </div>
     </div>
