fixing about me

--- a/nickdima/templates/home/about.html
+++ b/nickdima/templates/home/about.html
@@ -39,8 +39,8 @@
             <div class="navbar-brand">
                 
                 <span class="navbar-caption-wrap">
-                    <a class="navbar-caption text-white display-4" href="{{url_for('home.home_index')}}">
-                        MOBIRISE
+                    <a class="navbar-caption text-white display-4" href="{{url_for('lunchbreak.home')}}">
+                        Lunchbreak Arcade
                     </a>
                 </span>
             </div>
@@ -81,7 +81,7 @@
         <div class="media-container-row">
             <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
                 <ol>
-                    <li><strong>Salsa Dancer</strong> - no special actions required, all sites you make with Mobirise are mobile-friendly. You don't have to create a special mobile version of your site, it will adapt automagically. <a href="https://mobirise.com/">Try it now!</a></li>
+                    <li><strong>Salsa Dancer</strong> - no special actions required, all sites you make with Mobirise are mobile-friendly. You don't have to create a special mobile version of your site, it will adapt automagically. <a href="https://mobirise.com/">Here's a dance my partner and I choreog</a></li>
                     <li><strong>Machine Learning Enthusiast</strong>&nbsp;- cut down the development time with drag-and-drop website builder. Drop the blocks into the page, edit content inline and publish - no technical skills required. <a href="https://mobirise.com/">Try it now!</a></li>
                     <li><strong>Video Game Designer</strong> - choose from the large selection of latest pre-made blocks - full-screen intro, bootstrap carousel, content slider, responsive image gallery with lightbox, parallax scrolling, video backgrounds, hamburger menu, sticky header and more. <a href="https://mobirise.com/">Try it now!</a></li>
                 </ol>
@@ -98,7 +98,9 @@
         <div class="inner-container" style="width: 66%;">
             <hr class="line" style="width: 25%;">
             <div class="section-text align-center mbr-white mbr-fonts-style display-5">
-                    Mobirise is one of the easiest website development tools available today. It also gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.
+                    Finding passion in life is a marathon not a sprint. Don't let the internet and social media rush you because it's never too late to find the work you love in life and it's never to late to change if you no longer love what you do. 
+                        -- Michael Scott 
+                            -- Nick Dima
                 </div>
             <hr class="line" style="width: 25%;">
         </div>
@@ -114,7 +116,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 80%;">
-                      <img src="{{url_for('static', filename='main_assets/images/01.jpg')}}" alt="Mobirise">  
+                      <img src="{{url_for('static', filename='main_assets/images/01.jpg')}}" alt="Friends">  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
